tests/sksl/errors/ReservedNameHvec4.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'hvec4'
1 error
